// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "displayName": "Inspect",
  "docs": Object {
    "summary": "Examines the CloudFormation resource and discloses attributes.",
  },
  "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.Inspect",
  "jsiiId": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "Inspector",
      "docs": Object {
        "summary": "- tree inspector to collect and process attributes.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.Inspect.parameter.Inspector",
      "jsiiId": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector",
      "optional": undefined,
      "sourceFile": "lib/ecr.generated.ts",
      "sourceLine": 102,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "TreeInspector",
            "fqn": "Amazon.CDK.TreeInspector",
            "jsiiId": "@aws-cdk/core.TreeInspector",
            "jsiiProjectName": "@aws-cdk/core",
            "jsiiProjectVersion": "99.99.99",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "returnType": Object {
    "formattingPattern": "void",
  },
  "sourceFile": "lib/ecr.generated.ts",
  "sourceLine": 102,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
  "usage": "private void Inspect(TreeInspector Inspector)",
}
`;

exports[`csharp snapshot 2`] = `
" \`Inspect\` <a name=\\"Inspect\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.inspect\\"></a>

\`\`\`csharp
private void Inspect(TreeInspector Inspector)
\`\`\`

Examines the CloudFormation resource and discloses attributes.

# \`Inspector\`<sup>Required</sup> <a name=\\"Inspector\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector\\"></a>

- *Type:* undefined

tree inspector to collect and process attributes.

---
"
`;

exports[`go snapshot 1`] = `
Object {
  "displayName": "Inspect",
  "docs": Object {
    "summary": "Examines the CloudFormation resource and discloses attributes.",
  },
  "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepository.Inspect",
  "jsiiId": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "inspector",
      "docs": Object {
        "summary": "- tree inspector to collect and process attributes.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepository.Inspect.parameter.inspector",
      "jsiiId": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector",
      "optional": undefined,
      "sourceFile": "lib/ecr.generated.ts",
      "sourceLine": 102,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "TreeInspector",
            "fqn": "github.com/aws/aws-cdk-go/awscdk/awscdkcore.TreeInspector",
            "jsiiId": "@aws-cdk/core.TreeInspector",
            "jsiiProjectName": "@aws-cdk/core",
            "jsiiProjectVersion": "99.99.99",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "returnType": Object {
    "formattingPattern": "",
  },
  "sourceFile": "lib/ecr.generated.ts",
  "sourceLine": 102,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
  "usage": "func Inspect(inspector TreeInspector)",
}
`;

exports[`go snapshot 2`] = `
" \`Inspect\` <a name=\\"Inspect\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.inspect\\"></a>

\`\`\`go
func Inspect(inspector TreeInspector)
\`\`\`

Examines the CloudFormation resource and discloses attributes.

# \`inspector\`<sup>Required</sup> <a name=\\"inspector\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector\\"></a>

- *Type:* undefined

tree inspector to collect and process attributes.

---
"
`;

exports[`java snapshot 1`] = `
Object {
  "displayName": "inspect",
  "docs": Object {
    "summary": "Examines the CloudFormation resource and discloses attributes.",
  },
  "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.inspect",
  "jsiiId": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "inspector",
      "docs": Object {
        "summary": "- tree inspector to collect and process attributes.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.inspect.parameter.inspector",
      "jsiiId": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector",
      "optional": undefined,
      "sourceFile": "lib/ecr.generated.ts",
      "sourceLine": 102,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "TreeInspector",
            "fqn": "software.amazon.awscdk.core.TreeInspector",
            "jsiiId": "@aws-cdk/core.TreeInspector",
            "jsiiProjectName": "@aws-cdk/core",
            "jsiiProjectVersion": "99.99.99",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "returnType": Object {
    "formattingPattern": "void",
  },
  "sourceFile": "lib/ecr.generated.ts",
  "sourceLine": 102,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
  "usage": "public void inspect(TreeInspector inspector)",
}
`;

exports[`java snapshot 2`] = `
" \`inspect\` <a name=\\"inspect\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.inspect\\"></a>

\`\`\`java
public void inspect(TreeInspector inspector)
\`\`\`

Examines the CloudFormation resource and discloses attributes.

# \`inspector\`<sup>Required</sup> <a name=\\"inspector\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector\\"></a>

- *Type:* undefined

tree inspector to collect and process attributes.

---
"
`;

exports[`python snapshot 1`] = `
Object {
  "displayName": "inspect",
  "docs": Object {
    "summary": "Examines the CloudFormation resource and discloses attributes.",
  },
  "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.inspect",
  "jsiiId": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "inspector",
      "docs": Object {
        "summary": "- tree inspector to collect and process attributes.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.inspect.parameter.inspector",
      "jsiiId": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector",
      "optional": undefined,
      "sourceFile": "lib/ecr.generated.ts",
      "sourceLine": 102,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "TreeInspector",
            "fqn": "aws_cdk.core.TreeInspector",
            "jsiiId": "@aws-cdk/core.TreeInspector",
            "jsiiProjectName": "@aws-cdk/core",
            "jsiiProjectVersion": "99.99.99",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "returnType": Object {
    "formattingPattern": "None",
  },
  "sourceFile": "lib/ecr.generated.ts",
  "sourceLine": 102,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
  "usage": "def inspect(
  inspector: TreeInspector
) -> None",
}
`;

exports[`python snapshot 2`] = `
" \`inspect\` <a name=\\"inspect\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.inspect\\"></a>

\`\`\`python
def inspect(
  inspector: TreeInspector
) -> None
\`\`\`

Examines the CloudFormation resource and discloses attributes.

# \`inspector\`<sup>Required</sup> <a name=\\"inspector\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector\\"></a>

- *Type:* undefined

tree inspector to collect and process attributes.

---
"
`;

exports[`typescript snapshot 1`] = `
Object {
  "displayName": "inspect",
  "docs": Object {
    "summary": "Examines the CloudFormation resource and discloses attributes.",
  },
  "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect",
  "jsiiId": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "inspector",
      "docs": Object {
        "summary": "- tree inspector to collect and process attributes.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector",
      "jsiiId": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector",
      "optional": undefined,
      "sourceFile": "lib/ecr.generated.ts",
      "sourceLine": 102,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "TreeInspector",
            "fqn": "@aws-cdk/core.TreeInspector",
            "jsiiId": "@aws-cdk/core.TreeInspector",
            "jsiiProjectName": "@aws-cdk/core",
            "jsiiProjectVersion": "99.99.99",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "returnType": Object {
    "formattingPattern": "void",
  },
  "sourceFile": "lib/ecr.generated.ts",
  "sourceLine": 102,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
  "usage": "public inspect(inspector: TreeInspector): void",
}
`;

exports[`typescript snapshot 2`] = `
" \`inspect\` <a name=\\"inspect\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.inspect\\"></a>

\`\`\`typescript
public inspect(inspector: TreeInspector): void
\`\`\`

Examines the CloudFormation resource and discloses attributes.

# \`inspector\`<sup>Required</sup> <a name=\\"inspector\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector\\"></a>

- *Type:* undefined

tree inspector to collect and process attributes.

---
"
`;
